# WhatTheHack

./: .devcontainer.json  .gitattributes  .gitignore  030-EventDrivenFHIRPatientSearchWTH-HackDescritpion.md  CODEOWNERS  CONTRIBUTING-NEW.md  CONTRIBUTING.md  HowToHack.pptx  PRTest.txt  README.md  VISUAL-SHOWCASE.md  _config.yml  gajesgh  narkasur.txt  readme.md
.devcontainer/: .devcontain.json  devcontainer.json
.metals/: metals.lock.db
000-HowToHack/: DEPRECATED-WTH-HowToHack.md  TODOS.txt  (+22 more)
074-AIWithConfluentOnAzure/Student/Resources/agentic-application/: .dockerignore  .env.sh.example  DOCKER_BUILDS.md  Dockerfile.base  Dockerfile.customer  Dockerfile.employee  Dockerfile.inventory  Dockerfile.replenishment  Dockerfile.shopping  Dockerfile.supplier  LICENSE  NOTES.md  README.md  RUNNING_THE_APPLICATION.md  agent_customer_experience.py  agent_employee_experience.py  agent_supplier_experience.py  main.py  mcp_service.py  pyproject.toml
074-AIWithConfluentOnAzure/Student/Resources/agentic-application/contoso_retail_application/: __init__.py  agent_graphs.py  ai_foundry_setup.py  data_access_objects.py  models.py  service_configuration_inventory.py  service_configuration_replenishment.py  service_configuration_shopping.py  static_dataset.py  utils.py
074-AIWithConfluentOnAzure/Student/Resources/agentic-application/entrypoints/: entrypoint.agent-supplier.sh  entrypoint.mcp-inventory.sh  entrypoint.mcp-replenishment.sh  entrypoint.mcp-shopping.sh
074-AIWithConfluentOnAzure/Student/Resources/agentic-application/tests/: test_replenishment.py  test_sales.py
(+8625 files in other folders)
